Adding final market data + early draft of lead item

--- a/2025/2025-12-21-wir.md
+++ b/2025/2025-12-21-wir.md
@@ -1,13 +1,49 @@
 
-# TKTK
+# Sunsetting w3w
 ## TKTK
 
-![Backpacker in the woods staring at a forkin his path](https://w3w.news/img/content-tools-phil-monte-3000.jpg)  
+![Closeup of content creation tools, including a laptop and digital SLR camera](https://w3w.news/img/content-tools-phil-monte-3000.jpg)  
 *Photo by Phil Monte via [Unsplash](https://unsplash.com/@philgmonte)*
 
-**Lead item goes here.** Yadda yadda yadda.
-
 <!-- Blog re: social strategy for '26. Should run ~300 words -->
+
+**Like a lot of people these days,** I'm sick to death of corporate social platforms. In that spirit, this will be my last regular update of w3w via Substack. In effect, I'll also be retiring the w3w brand in general. <!-- Could use a link here to a news story about declining public faith in the Big Tech platforms. -->
+
+But fear not: I will continue to write about emerging tech (and sometimes other topics as well) via my self-hosted personal blog. And that site will maintain its own email distribution list as well, starting Jan. 30.
+
+So if you want to keep getting updates like this from me via your inbox, just hang tight. By default, I will include all w3w's Substack subcribers as of Jan. 30 on the new email distribution list. Thus we can continue our conversation about tech into 2026 and beyond.
+
+To be honest, w3w was always basically a one-man show anyway. So I figure this approach will make sense for most subscribers.
+
+That said, I also want to be transparent about moving people's email addresses from one service to another. If you don't want to be included on my post-Substack distribution list, there are two ways to opt out:
+
+- Unsubscribe from w3w on Substack before Jan. 30. Or...
+
+- Drop me a direct message via email at peter[at]pmckay[dot]come, and I will remove you manually. (This is also a good option if you have questions or comments you want to pass along.)
+
+
+
+<!-- -->
+
+<!-- why -->
+
+<!-- thanks/history -->
+
+<!-- CTA for gigs/hiring -->
+
+<!--
+
+Other notes, etc...
+
+I'm taking this year-end period as an opportunity to reassess which ones are still truly useful for me and which ones I could really do without.
+
+I figure this will help me minimize exposure to the nastier aspects of corporate platforms, but still maintain a community, etc.
+
+Stricter POSSE approach.
+
+-->
+
+
 
 ### Week in Review: Dec. 14-20, 2025
 
@@ -67,40 +103,40 @@ Additional candidates...
 
   <tbody>
     <tr>
-      <td><a href="https://coinmarketcap.com/currencies/bitcoin/">Bitcoin</a></td>
-      <td>$</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td><a href="https://coinmarketcap.com/currencies/bitcoin">Bitcoin</a></td>
+      <td>$87,909.09</td>
+      <td>-2.4%</td>
+      <td>-6.3%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/GC%3DF?p=GC%253DF">Gold</a></td>
-      <td>$</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>$4,387.30</td>
+      <td>+1.4%</td>
+      <td>+66.9%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/DX-Y.NYB?p=DX-Y.NYB&.tsrc=fin-srch">USD Index</a></td>
-      <td></td>
-      <td>-%</td>
-      <td>-%</td>
+      <td>98.72</td>
+      <td>+0.3%</td>
+      <td>-9.0%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ETNX/">10-yr U.S. <br>Treasury Yield</a></td>
-      <td>%</td>
-      <td>-</td>
-      <td>-</td>
+      <td>4.151%</td>
+      <td>-0.043</td>
+      <td>-0.422</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ENDX/components?p=%255ENDX">Nasdaq 100</a></td>
-      <td></td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>25,346.18</td>
+      <td>+0.6%</td>
+      <td>+20.6%</td>
     </tr>
     <tr>
       <td><a href="https://www.msci.com/indexes/index/899901">MSCI All-Country <br>World Index (ex US)</a></td>
-      <td></td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>399.38</td>
+      <td>-0.3%</td>
+      <td>+30.4%</td>
     </tr>
   </tbody>
 </table>
