Writing through news summaries

--- a/2025/2025-12-21-wir.md
+++ b/2025/2025-12-21-wir.md
@@ -1,11 +1,10 @@
-
 # Sunsetting w3w
 ## TKTK
 
 ![Closeup of content creation tools, including a laptop and digital SLR camera](https://w3w.news/img/content-tools-phil-monte-3000.jpg)  
 *Photo by Phil Monte via [Unsplash](https://unsplash.com/@philgmonte)*
 
-<!-- Blog re: social strategy for '26. Should run ~300 words -->
+<!-- Blog re: content strategy for '26. Should run ~300 words -->
 
 **Like a lot of people these days,** I'm sick to death of corporate social platforms. In that spirit, this will be my last regular update of w3w via Substack. In effect, I'll also be retiring the w3w brand in general. <!-- Could use a link here to a news story about declining public faith in the Big Tech platforms. -->
 
@@ -49,17 +48,24 @@ Stricter POSSE approach.
 
 - **Stablecoins:** FDIC proposes new stablecoins rules. ([]()) <!-- Link TK --> | Gold-backed stablecoins are booming. ([The Block](https://www.theblock.co/post/382582/gold-backed-stablecoins-near-4-billion-as-safe-haven-demand-grows-onchain)) | Visa launches new stablecoin settlement ([The Block](https://www.theblock.co/post/382721/visa-launches-stablecoin-settlement-us-circle-usdc-solana?utm_source=robinhood&utm_medium=rss)) |  ([Decrypt](https://decrypt.co/352548/visa-begins-us-stablecoin-settlement-usdc-solana))
 
-- Crypto liquidity is shrinking ahead of the holidays ([Decrypt](https://decrypt.co/352522/crypto-market-liquidity-shrinks-ahead-of-holidays))
+- The Federal Reserve is seeking public feedback on a proposed "payment account" or "skinny master account" that would grant certain institutions, potentially including crypto-related firms, limited access to the central bank's payment services. This account would allow eligible institutions to clear and settle payments without the full privileges of a traditional master account, while keeping the payments system safe. Comments on the proposal are due in 45 days. ([The Block](https://www.theblock.co/post/383343/fed-seeks-public-input-on-skinny-master-account-for-limited-access-to-the-central-bank)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+
+- The SEC is seeking to bar former Alameda CEO Caroline Ellison and former FTX executives Gary Wang and Nishad Singh from being directors or officers of public companies for several years. Ellison agreed to a 10-year ban, while Wang and Singh agreed to an 8-year ban, as part of a proposed consent judgment related to their roles in the collapse of FTX and Alameda Research. The SEC previously charged the three executives with defrauding investors and reached a settlement. ([The Block](https://www.theblock.co/post/383363/sec-seeks-multi-year-officer-director-bans-alameda-ceo-ellison-ftx-execs-wang-singh)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
 - **UK Treasury plans new rules to stricter crypto market oversight** *The Guardian: UK regulators are preparing to expand the regulatory perimeter around cryptocurrencies to protect consumers — a major development in digital asset policy.* [https://www.theguardian.com/technology/2025/dec/15/uk-treasury-drawing-up-new-rules-to-police-cryptocurrency-markets](https://www.theguardian.com/technology/2025/dec/15/uk-treasury-drawing-up-new-rules-to-police-cryptocurrency-markets) ([The Guardian][5]) <!-- ChatGPT --> | UK crypto ownship is down ([The Block](https://www.theblock.co/post/382722/uk-crypto-ownership-falls-2025-fca))
 
+- Google has been aggressively rehiring former employees, with 20% of its AI software engineers hired in 2025 being so-called "boomerang employees." This trend is part of the company's efforts to compete for AI talent, which has been heating up between companies like OpenAI, Meta, and Anthropic. Google's deep pockets and computational infrastructure are major draws for AI-focused software engineers. ([CNBC](https://www.cnbc.com/2025/12/19/google-boomerang-year-20percent-ai-software-devs-hired-2025-ex-employees.html)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+
 - JPM launched its first tokenized money-market fund. ([]()) <!-- Link TK --> | **JPMorgan uses blockchain for commercial debt issuance** *Reuters: JPMorgan issues commercial paper on the Solana blockchain using USDC, signaling deeper institutional adoption of blockchain for traditional financial instruments.* [https://www.reuters.com/technology/jp-morgan-harnesses-blockchain-debt-issuance-amid-digital-asset-adoption-boost-2025-12-11/](https://www.reuters.com/technology/jp-morgan-harnesses-blockchain-debt-issuance-amid-digital-asset-adoption-boost-2025-12-11/) ([Reuters][6]) <!-- ChatGPT -->
 
-- **HashKey Debuts on Hong Kong Exchange Following $206 Million IPO** The licensed crypto platform HashKey officially began trading on the Hong Kong Stock Exchange on December 17. Despite a slight slide in share price during its debut, the $206 million IPO marks a milestone for the city's ambition to become a regulated global hub for virtual assets. **Full Article:** [HashKey shares slide 3% in Hong Kong debut after $206 million IPO](https://www.theblock.co/latest-crypto-news)  <!-- Gemini -->
 
 <!--
 
 Additional candidates...
+
+- Crypto liquidity is shrinking ahead of the holidays ([Decrypt](https://decrypt.co/352522/crypto-market-liquidity-shrinks-ahead-of-holidays))
+
+- **HashKey Debuts on Hong Kong Exchange Following $206 Million IPO** The licensed crypto platform HashKey officially began trading on the Hong Kong Stock Exchange on December 17. Despite a slight slide in share price during its debut, the $206 million IPO marks a milestone for the city's ambition to become a regulated global hub for virtual assets. **Full Article:** [HashKey shares slide 3% in Hong Kong debut after $206 million IPO](https://www.theblock.co/latest-crypto-news)  <!-- Gemini
 
 - **Hut 8 Seals $7 Billion AI Data Center Lease with Anthropic** In a massive shift from crypto mining to AI infrastructure, Hut 8 has signed a 15-year lease agreement with AI developer Anthropic and infrastructure provider Fluidstack. The deal, which involves a financial backstop from Google, underscores the urgent demand for massive compute power and represents one of the largest infrastructure plays in the current AI arms race.
 **Full Article:** [Hut 8 shares jump as ex-bitcoin miner signs US$7 billion AI data centre lease](https://www.bnnbloomberg.ca/investing/2025/12/17/hut-8-shares-jump-as-ex-bitcoin-miner-signs-us7-billion-ai-data-center-lease/) <!-- Gemini
@@ -143,19 +149,13 @@ Additional candidates...
 
 ### Looking Ahead
 
+- **Mixed news for crypto in the U.S. Senate.** The Senate's crypto market structure bill, known as the Clarity Act, is set for a January markup, moving the landmark legislation closer to a floor vote. The bill aims to establish a comprehensive federal framework for digital assets by defining regulatory jurisdiction between the Securities and Exchange Commission and the Commodity Futures Trading Commission. However, Democratic concerns over regulatory independence and potential presidential power to appoint and remove agency commissioners may impact the bill's passage. ([Decrypt](https://decrypt.co/352981/senators-set-january-markup-for-crypto-market-structure-bill)) <!-- Draft summary by Leo/Llama 3.1 8B --> | Sen. Cynthia Lummis, a strong ally to the crypto industry in Washington, has announced she will not seek reelection when her term expires next year. Lummis, often referred to as the "Bitcoin Senator," has been instrumental in passing industry-favored legislation, including the GENIUS Act, which established a federal framework for stablecoins. Her retirement will likely impact ongoing negotiations over the crypto industry's coveted market structure bill. ([Decrypt](https://decrypt.co/353210/bitcoin-senator-cynthia-lummis-not-run-reelection)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+
+- Mizuho says Coinbase could cannibalize its core crypto business by launching a predictions market. ([Decrypt](https://decrypt.co/352554/coinbase-risks-crypto-cannibalization-prediction-market-push-mizuho)) |
+
+- Coinbase has filed federal lawsuits in three states, including Illinois, to challenge state attempts to block prediction markets, arguing that they fall under the Commodity Futures Trading Commission's authority rather than individual state gaming boards. The lawsuits come as Coinbase prepares to launch prediction markets in January 2026 through a partnership with Kalshi, a CFTC-registered designated contract market. This move is seen as a significant validation of the prediction market industry, with some experts predicting a shift from a duopoly to a more competitive market in 2026. ([Decrypt](https://decrypt.co/352984/coinbase-sues-three-states-over-prediction-market-regulation)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+
 - **How AI’s power demands are reshaping energy infrastructure** *Reuters: Energy use tied to explosive AI growth is pushing companies toward unconventional power solutions, including small modular nuclear reactors and renewables to avoid grid shortfalls.* [https://www.reuters.com/sustainability/climate-energy/time-go-nuclear-inside-battle-power-ai--ecmii-2025-12-17/](https://www.reuters.com/sustainability/climate-energy/time-go-nuclear-inside-battle-power-ai--ecmii-2025-12-17/) ([Reuters][1]) <!-- ChatGPT -->
-
-- Now that's a contrarian argument: TKTK says DATCs are undervalued. ([Bitcoin Magazine](https://bitcoinmagazine.com/markets/bitcoin-treasury-companies-are-undervalued)) | - Twenty One Capital's post-IPO trading hasn't gone well. ([]()) <!-- Link TK -->
-
-- Mizuho says Coinbase could cannibalize its core crypto business by launching a predictions market. ([Decrypt](https://decrypt.co/352554/coinbase-risks-crypto-cannibalization-prediction-market-push-mizuho))
-
-<!--
-
-A backup option if we need it...
-
-- Quantum computing is gaining momentum, with companies like IBM and startups like IonQ racing to bring the technology to market. According to the latest developments, IBM is aiming to achieve quantum advantage by 2029, while IonQ claims to have already reached this milestone with its 36 quadrillion times more powerful machines, sparking a debate on who's leading the charge in this rapidly evolving field. ([Bloomberg](https://www.youtube.com/watch?v=muoMUmJj4XA)) <!-- Draft news summary by  Leo/Llama 3.1 8B
-
--->
 
 ### Odds & Ends
 
